add email api
